<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabbedLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="blank"></string>
    <string name="Active">Active</string>
    <string name="Off">OFF</string>
    <string name="Delete">Delete</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="AddSwimmer">Add Swimmer</string>
    <string name="speedLabel">S/25Y</string>
    <string name="settingsFile">net.connorvickers.pacestrip.SETTINGS</string>
    <string name="spaceBetweenLEDs">spaceBetweenLEDs</string>
    <string name="distanceWallToFirstLED">distanceWallToFirstLED</string>
    <string name="locationFarWall">locationFarWall</string>
    <string name="milliSecBetwSwim">milliSecBetwSwim</string>
    <string name="numLEDs">numLEDs</string>
    <string name="selectStrip">Select Strip</string>
    <string name="deviceHash">deviceHash</string>
    <string name="mode">mode</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="solidColor">solidColor</string>

</resources>