<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/Add_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/startStop"
        android:text="@string/AddSwimmer" />

    <ListView
        android:id="@+id/pacelistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/Add_Btn" >
    </ListView>

    <ToggleButton
        android:id="@+id/startStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textOff="@string/start"
        android:textOn="@string/stop" />

</RelativeLayout>